# iv2gltf

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
apps/gltf2iv/: CMakeLists.txt  main_gltf2iv.cxx
apps/iv2gltf/: CMakeLists.txt  main_iv2gltf.cxx
shared/Coin3D/: CMakeLists.txt
shared/GltfIv/: CMakeLists.txt  GltfIv.cxx  GltfIv.h  GltfIvWriter.cxx  GltfIvWriter.h
shared/IvGltf/: CMakeLists.txt  IvGltf.cxx  IvGltf.h  IvGltfReader.cxx  IvGltfReader.h  IvGltfWriter.cxx  IvGltfWriter.h
shared/IvGltf/tests/: CMakeLists.txt  TestWriter.cxx
